--- a/api-catalog.yml
+++ b/api-catalog.yml
@@ -4,11 +4,13 @@ server:
 spring:
   application:
     name: api-catalog
-  datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/movie_dev
-    username: ${USER_NAME}
-    password: ${PASSWORD}
+  mongodb:
+    embedded:
+      version: 4.0.2
+  data:
+    mongodb:
+      database: test
+      port: 27017
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: true
