--- a/api-serie.yml
+++ b/api-serie.yml
@@ -4,11 +4,10 @@ server:
 spring:
   application:
     name: api-serie
-  datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/movie_dev
-    username: ${USER_NAME}
-    password: ${PASSWORD}
+  data:
+    mongodb:
+      database: test
+      port: 27017
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: true
