--- a/api-serie.yml
+++ b/api-serie.yml
@@ -4,6 +4,9 @@ server:
 spring:
   application:
     name: api-serie
+  mongodb:
+    embedded:
+      version: 4.0.2
   data:
     mongodb:
       database: test
