--- a/api-serie.yml
+++ b/api-serie.yml
@@ -50,3 +50,16 @@ spring:
       configs:
         default:
           register-health-indicator: true
+          sliding-window-size: 10
+          minimum-number-of-calls: 5
+          permitted-number-of-calls-in-half-open-state: 3
+          wait-duration-in-open-state: 30s
+          automatic-transition-from-open-to-half-open-enabled: true
+          failure-rate-threshold: 50
+      instances:
+        clientCustomer:
+          base-config: default
+          sliding-window-type: COUNT_BASED
+          sliding-window-size: 5
+          wait-duration-in-open-state: 1m
+          failure-rate-threshold: 20
