--- a/api-serie.yml
+++ b/api-serie.yml
@@ -40,7 +40,7 @@ spring:
             - java.io.IOException
             - java.net.SocketTimeoutException
         instances:
-          retryCustomer:
+          retrySerie:
             base-config: default
             max-retry-attempts: 5
             wait-duration: 2s
@@ -57,7 +57,7 @@ spring:
           automatic-transition-from-open-to-half-open-enabled: true
           failure-rate-threshold: 50
       instances:
-        clientCustomer:
+        clientSerie:
           base-config: default
           sliding-window-type: COUNT_BASED
           sliding-window-size: 5
