--- a/api-movie.yml
+++ b/api-movie.yml
@@ -7,6 +7,11 @@ spring:
     enabled: true
   application:
     name: api-movie
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/movie_dev
