--- a/api-catalog.yml
+++ b/api-catalog.yml
@@ -7,6 +7,11 @@ spring:
     enabled: true
   application:
     name: api-catalog
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
   mongodb:
     embedded:
       version: 4.0.2
