--- a/api-catalog.yml
+++ b/api-catalog.yml
@@ -2,9 +2,6 @@ server:
   port: 0
 
 spring:
-  zipkin:
-    base-url: http://localhost:9411/
-    enabled: true
   application:
     name: api-catalog
   rabbitmq:
@@ -12,13 +9,13 @@ spring:
     password: guest
     host: localhost
     port: 5672
-  mongodb:
-    embedded:
-      version: 4.0.2
-  data:
-    mongodb:
-      database: test
-      port: 27017
+  zipkin:
+    baseUrl: http://localhost:9411/
+  datasource:
+    driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/digitalhouse-dev
+    username: usr-digitalhouse
+    password: pwd-digitalhouse
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: true
