--- a/api-movie.yml
+++ b/api-movie.yml
@@ -2,9 +2,6 @@ server:
   port: 0
 
 spring:
-  zipkin:
-    base-url: http://localhost:9411/
-    enabled: true
   application:
     name: api-movie
   rabbitmq:
@@ -12,11 +9,13 @@ spring:
     password: guest
     host: localhost
     port: 5672
+  zipkin:
+    baseUrl: http://localhost:9411/
   datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/movie_dev
-    username: ${USER_NAME}
-    password: ${PASSWORD}
+    driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/digitalhouse-dev
+    username: usr-digitalhouse
+    password: pwd-digitalhouse
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: true
