--- a/api-serie.yml
+++ b/api-serie.yml
@@ -2,16 +2,25 @@ server:
   port: 0
 
 spring:
-  zipkin:
-    base-url: http://localhost:9411/
-    enabled: true
   application:
-    name: api-serie
+    name: api-course
   rabbitmq:
     username: guest
     password: guest
     host: localhost
     port: 5672
+  zipkin:
+    baseUrl: http://localhost:9411/
+  datasource:
+    driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/digitalhouse-dev
+    username: usr-digitalhouse
+    password: pwd-digitalhouse
+  jpa:
+    hibernate.ddl-auto: update
+    generate-ddl: true
+    show-sql: true
+
   mongodb:
     embedded:
       version: 4.0.2
@@ -19,10 +28,6 @@ spring:
     mongodb:
       database: test
       port: 27017
-  jpa:
-    hibernate.ddl-auto: update
-    generate-ddl: true
-    show-sql: true
 
   info:
     application:
