--- a/api-serie.yml
+++ b/api-serie.yml
@@ -12,10 +12,10 @@ spring:
   zipkin:
     baseUrl: http://localhost:9411/
   datasource:
-    driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/digitalhouse-dev
-    username: usr-digitalhouse
-    password: pwd-digitalhouse
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/movie_dev
+    username: ${USER_NAME}
+    password: ${PASSWORD}
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: true
